--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "redux-rtk",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "node-fetch": "^2.6.7",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6"
   }
